[project]
name = "ipblocker"
version = "0.0.2"
description = "Block ip from nginx access log automatically"
readme = "README.md"
requires-python = ">=3.11"
dependencies = ["polars>=1.34.0"]

[project.urls]
"Source" = "https://github.com/qmaru/ipblocker.git"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
asyncio_default_fixture_loop_scope = "function"

[tool.hatch.build.targets.wheel]
module = "ipblocker"

[project.scripts]
ipblocker = "ipblocker:main"